Fixed runSearch